# daydream

./: .gitignore  Cargo.toml  README.md  plan.md
.cargo/: config.toml
entries/: Daily Entry - 『sample』.md
src/: app.rs  calendar.rs  editor.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
src/scripts/: clean.rs
