[package]
name = "daydream"
version = "0.1.1"
edition = "2021"
default-run = "daydream" # This line sets the default binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossterm = "0.27.0"

ratatui = { version = "0.25.0", features = ["widget-calendar"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.0"
tempfile = "3.9.0"
time = { version = "0.3.31" }
tui-textarea = "0.4.0"

[[bin]]
name = "daydream"
path = "src/main.rs"

[[bin]]
name = "clean"
path = "src/scripts/clean.rs"
